# qpcetu

./: .clang-format  .dockerignore  .editorconfig  .gitmodules  CLAUDE.md  CMakeLists.txt  DOCKER.md  DOCKERFILE_UPDATE.md  DOCKERFILE_VERIFICATION.md  Dockerfile  Dockerfile.base  Dockerfile.ci  HOW_TO_ACCESS_INDUSTRIAL_XML.md  INDUSTRIAL_BUTTON_FIXED.md  LICENSE  LIST_INTERFACE_SUCCESS.md  PROJECT_SPECS.md  README.md  build.sh  docker-build.sh  docker-compose-ci.yml  docker-compose.yml  fix_headers.py  mxe-lite  test_mcp_connectivity.py  test_mcp_servers.py  validate-dockerfile.sh  windows-toolchain.cmake
.devcontainer/: Dockerfile  README.md  devcontainer.json  qt-install.qs  verify-mcp.sh
.github/: CONTRIBUTING.md  quality-assurance.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: DECISIONS.md  RULES.md  TEMPLATES.md  VALIDATION.md  apple-design-system-reference.md  apple-implementation-complete.md  apple-integration-complete.md  apple-style-guide.txt  instructions.instructions.md
.github/workflows/: ci.yml
build-linux-x64/: CMakeCache.txt  Makefile  cmake_install.cmake  qrc_overview.cpp
build-linux-x64/ModernSciFiHMI_autogen/: mocs_compilation.cpp
build-linux-x64/ModernSciFiHMI_autogen/6JCNSNR7WH/: moc_command.cpp.d
build-linux-x64/ModernSciFiHMI_autogen/DKENSKBYO5/: moc_breadcrumbwidget.cpp  moc_breadcrumbwidget.cpp.d  moc_navigationmanager.cpp  moc_navigationmanager.cpp.d
build-linux-x64/ModernSciFiHMI_autogen/GQ6NBGVJMG/: moc_controllerxmlservice.cpp.d
build-linux-x64/ModernSciFiHMI_autogen/MKDT3456JX/: moc_controllerstrategy.cpp.d
build-linux-x64/ModernSciFiHMI_autogen/QQMEBWJXMO/: moc_controllerstatemachine.cpp  moc_controllerstatemachine.cpp.d
build-linux-x64/SciFiDataScreen_autogen/: mocs_compilation.cpp
build-linux-x64/tests/: CTestTestfile.cmake  Makefile  test_animatedprogressbar  test_datawidget  test_graphwidget
build-tests/: CMakeCache.txt  Makefile  cmake_install.cmake  mockudpservice
build-tests/ModernSciFiHMI_autogen/: moc_predefs.h
build-tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_industrialcontroller  test_udp_integration  test_udpservice
build-windows/: CMakeLists.txt
build-windows-x64/: CMakeCache.txt  Makefile  cmake_install.cmake  qrc_overview.cpp
build-windows-x64/ModernSciFiHMI_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-windows-x64/mockudpservice_autogen/: deps  moc_predefs.h
docs/: ARCHITECTURE.md  PROFESSIONAL_STRUCTURE_STATUS.md  README.md  STEP_6_COMPLETE.md
docs/api/: README.md
docs/deployment/: README.md  build-scripts.md
docs/design/: README.md  ui-specification.md
docs/development/: README.md  build-system.md  guidelines.md
scripts/: CMakeCache.txt  build-all.sh  build-linux.sh  build-windows.sh  qa-validation.sh  run-tests.sh
src/: animatedprogressbar.cpp  animatedprogressbar.h  animatedprogressbar.h.bak  controllermanager.cpp  controllermanager.h  datawidget.cpp  datawidget.h  graphwidget.cpp  graphwidget.h  graphwidget.h.bak  industrialcontroller.cpp  industrialcontroller.h  main.cpp  main_modern.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.bak  mockudpservice.cpp  udpresponsepage.cpp  udpresponsepage.h  udpresponsepage.h.bak  udpservice.cpp  udpservice.h
src/commands/: command.cpp  command.h  command.h.bak  configurationcommand.cpp  configurationcommand.h  writevaluecommand.cpp  writevaluecommand.h
src/data/: datarepository.h  datarepository.h.bak
src/events/: industrialeventmanager.h
src/factories/: controllerfactory.cpp  controllerfactory.h
src/interfaces/: icommand.h  idatasink.h  idatasource.h  irepository.h
src/models/: datapoint.h
src/navigation/: breadcrumbwidget.cpp  breadcrumbwidget.h  navigationmanager.cpp  navigationmanager.h  navigationmanager.h.bak
src/pages/: controlleroverview.cpp  controlleroverview.h  dashboardpage.cpp  dashboardpage.h  dashboardpage.h.bak  dragdroppage_simple.cpp  dragdroppage_simple.h  dragdroppage_simple.h.bak  graphspage.cpp  graphspage.h  industrialdatapage.cpp  industrialdatapage.h  overviewpage.cpp  overviewpage.h  overviewpage.h.bak  settingspage.cpp  settingspage.h  simpledragdroppage.cpp  simpledragdroppage.h  simpledragdroppage.h.bak  udpresponsepage.cpp  udpresponsepage.h  webbrowserpage.cpp  webbrowserpage.h  webbrowserpage.h.bak
src/plugins/: controllerplugininterface.h  controllerplugininterface.h.bak
src/repositories/: circularbufferrepository.cpp  circularbufferrepository.h  sqliterepository.cpp  sqliterepository.h
src/services/: controllerxmlservice.cpp  controllerxmlservice.h  modbusservice.cpp  modbusservice.h
src/statemachine/: controllerstatemachine.cpp  controllerstatemachine.h  controllerstatemachine.h.bak
src/statemachines/: connectionstatemachine.cpp  connectionstatemachine.h
src/strategies/: controllerstrategy.cpp  controllerstrategy.h  controllerstrategy.h.bak
src/ui/: applestyle.cpp  applestyle.h  controllercardwidget.cpp  controllercardwidget.h  controllercardwidget.h.bak  hamburgermenu.cpp  hamburgermenu.h  hamburgermenu.h.bak  modernmainwindow.cpp  modernmainwindow.h  modernmainwindow.h.bak  modernmainwindow_fixed.cpp  thememanager.cpp  thememanager.h  thememanager.h.bak  themesettingswidget.cpp  themesettingswidget.h  virtualkeyboard.cpp  virtualkeyboard.h
src/utils/: result.h
src/viewmodels/: dashboardviewmodel.cpp  dashboardviewmodel.h  graphviewmodel.cpp  graphviewmodel.h
test-reports/: test-summary-20251005-184226.txt
tests/: CMakeLists.txt  Makefile  README.md  moc_animatedprogressbar.cpp  moc_datawidget.cpp  moc_graphwidget.cpp  moc_mainwindow.cpp  test_mainwindow  test_mainwindow.cpp  test_mainwindow.moc  test_mainwindow.pro
tests/integration/: test_udp_integration.cpp
tests/mocks/: mockcontrollermanager.cpp  mockcontrollermanager.h  mockindustrialcontroller.cpp  mockindustrialcontroller.h  mockudpservice.cpp  mockudpservice.h
tests/unit/: test_animatedprogressbar.cpp  test_datawidget.cpp  test_graphwidget.cpp  test_industrialcontroller.cpp  test_udpservice.cpp
(+210 files in other folders)
